added new markup and files

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>Component Developemnt for Blog Project</title>
 </head>
 
 <body>
+    <header>
+        <nav class="main-navigation">
+            <ul class="nav-links">
+                <li class="nav-link"><a href="#" class="nav-link-item">Link</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Blog List</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Blog</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Sidebar</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Sign Up</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Log In</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Logo</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Navigation</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Header</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">Footer</a></li>
+                <li class="nav-link"><a href="#" class="nav-link-item">User Profile</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
