added footer to the blog list page

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="../Header/Header.css">
     <link rel="stylesheet" href="../Navigiation/Navigation.css">
+    <link rel="stylesheet" href="../Footer/Footer.css">
 
 </head>
 
@@ -33,6 +34,12 @@
                 </ul>
             </nav>
         </header>
+        <main class="main-area">
+            <h1>Main Area</h1>
+        </main>
+        <footer class="footer">
+            <p>Welcome to the Blog</p>
+        </footer>
 
     </div>
 
