--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -35,7 +35,26 @@
             </nav>
         </header>
         <main class="main-area">
-            <h1>Main Area</h1>
+            <h1>Blog List</h1>
+            <section class="blog-list">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Category</th>
+                            <th>Author</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Javascript</td>
+                            <td>Web Dev</td>
+                            <td>Mark</td>
+                        </tr>
+                    </tbody>
+
+                </table>
+            </section>
         </main>
         <footer class="footer">
             <p>Welcome to the Blog</p>
