added some styling

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Header/Header.css">
     <link rel="stylesheet" href="../Navigiation/Navigation.css">
     <link rel="stylesheet" href="../Footer/Footer.css">
+    <link rel="stylesheet" href="Blog List.css">
 
 </head>
 
@@ -37,7 +38,7 @@
         <main class="main-area">
             <h1>Blog List</h1>
             <section class="blog-list">
-                <table>
+                <table class="blogs">
                     <thead>
                         <tr>
                             <th>Title</th>
