added more sample details

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -44,6 +44,8 @@
                             <th>Title</th>
                             <th>Category</th>
                             <th>Author</th>
+                            <th>Date</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -51,6 +53,8 @@
                             <td>Javascript</td>
                             <td>Web Dev</td>
                             <td>Mark</td>
+                            <td>March 1, 1988</td>
+                            <td>Edit || Delete</td>
                         </tr>
                     </tbody>
 
