added some styling and markup

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -44,7 +44,10 @@
                             <th>Title</th>
                             <th>Category</th>
                             <th>Author</th>
-                            <th>Date</th>
+                            <th>Uploaded</th>
+                            <th>Updated</th>
+                            <th>Likes</th>
+                            <th>Views</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -54,6 +57,9 @@
                             <td>Web Dev</td>
                             <td>Mark</td>
                             <td>March 1, 1988</td>
+                            <td>March 1, 1988</td>
+                            <td>100</td>
+                            <td>1000</td>
                             <td>Edit || Delete</td>
                         </tr>
                     </tbody>
