added new markup for the blog using div as table

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -52,19 +52,45 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Javascript</td>
-                            <td>Web Dev</td>
-                            <td>Mark</td>
-                            <td>March 1, 1988</td>
-                            <td>March 1, 1988</td>
-                            <td>100</td>
-                            <td>1000</td>
-                            <td>Edit || Delete</td>
-                        </tr>
+                        <a href="index.html">
+                            <tr>
+                                <td>Javascript</td>
+                                <td>Web Dev</td>
+                                <td>Mark</td>
+                                <td>March 1, 1988</td>
+                                <td>March 1, 1988</td>
+                                <td>100</td>
+                                <td>1000</td>
+                                <td>Edit || Delete</td>
+                            </tr>
+                        </a>
                     </tbody>
 
                 </table>
+
+                <div role="grid" class="blogs__table">
+                    <div role="row" class="blog__row_head">
+
+                        <div role="gridcell" class="blog__cell">Title</div>
+                        <div role="gridcell" class="blog__cell">Category</div>
+                        <div role="gridcell" class="blog__cell">Author</div>
+                        <div role="gridcell" class="blog__cell">Uploaded</div>
+                        <div role="gridcell" class="blog__cell">Updated</div>
+                        <div role="gridcell" class="blog__cell">Views</div>
+                        <div role="gridcell" class="blog__cell">1000</div>
+                        <div role="gridcell" class="blog__cell">Actions</div>
+                    </div>
+                    <a role="row" class="blog__row_body" href="#">
+                        <div role="gridcell" class="blog__cell">Javascript</div>
+                        <div role="gridcell" class="blog__cell">Web Dev</div>
+                        <div role="gridcell" class="blog__cell">Mark</div>
+                        <div role="gridcell" class="blog__cell">March 1, 1988</div>
+                        <div role="gridcell" class="blog__cell">March 1, 1988</div>
+                        <div role="gridcell" class="blog__cell">100</div>
+                        <div role="gridcell" class="blog__cell">1000</div>
+                        <div role="gridcell" class="blog__cell">Edit || Delete</div>
+                    </a>
+                </div>
             </section>
         </main>
         <footer class="footer">
