--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -38,7 +38,7 @@
         <main class="main-area">
             <h1>Blog List</h1>
             <section class="blog-list">
-                <table class="blogs">
+                <!-- <table class="blogs">
                     <thead>
                         <tr>
                             <th>Title</th>
@@ -66,10 +66,10 @@
                         </a>
                     </tbody>
 
-                </table>
+                </table> -->
 
                 <div role="grid" class="blogs__table">
-                    <div role="row" class="blog__row_head">
+                    <div role="row" class="blog-row__head">
 
                         <div role="gridcell" class="blog__cell">Title</div>
                         <div role="gridcell" class="blog__cell">Category</div>
@@ -80,7 +80,7 @@
                         <div role="gridcell" class="blog__cell">1000</div>
                         <div role="gridcell" class="blog__cell">Actions</div>
                     </div>
-                    <a role="row" class="blog__row_body" href="#">
+                    <a role="row" class="blog-row__body" href="#">
                         <div role="gridcell" class="blog__cell">Javascript</div>
                         <div role="gridcell" class="blog__cell">Web Dev</div>
                         <div role="gridcell" class="blog__cell">Mark</div>
