added a new font

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -49,7 +49,7 @@
                         <div role="gridcell" class="blog__cell">Uploaded</div>
                         <div role="gridcell" class="blog__cell">Updated</div>
                         <div role="gridcell" class="blog__cell">Views</div>
-                        <div role="gridcell" class="blog__cell">1000</div>
+                        <div role="gridcell" class="blog__cell">Likes</div>
                         <div role="gridcell" class="blog__cell">Actions</div>
                     </div>
                     <a role="row" class="blog-row__body" href="#">
