made some modifications

--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -62,13 +62,32 @@
                         <div role="gridcell" class="blog__cell">1000</div>
                         <div role="gridcell" class="blog__cell">Edit || Delete</div>
                     </a>
+                    <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell">HTML</div>
+                        <div role="gridcell" class="blog__cell">Web Dev</div>
+                        <div role="gridcell" class="blog__cell">Marcus</div>
+                        <div role="gridcell" class="blog__cell">March 2, 1988</div>
+                        <div role="gridcell" class="blog__cell">March 2, 1988</div>
+                        <div role="gridcell" class="blog__cell">1000</div>
+                        <div role="gridcell" class="blog__cell">100</div>
+                        <div role="gridcell" class="blog__cell">Edit || Delete</div>
+                    </a>
+                    <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell">CSS</div>
+                        <div role="gridcell" class="blog__cell">Web Dev</div>
+                        <div role="gridcell" class="blog__cell">Leo</div>
+                        <div role="gridcell" class="blog__cell">March 3, 1988</div>
+                        <div role="gridcell" class="blog__cell">March 3, 1988</div>
+                        <div role="gridcell" class="blog__cell">1000</div>
+                        <div role="gridcell" class="blog__cell">10000</div>
+                        <div role="gridcell" class="blog__cell">Edit || Delete</div>
+                    </a>
                 </div>
-
-
             </section>
         </main>
         <footer class="footer">
             <p>Welcome to the Blog</p>
+            <p>All Rights Reserved</p>
         </footer>
 
     </div>
