--- a/Footer/Footer.html
+++ b/Footer/Footer.html
@@ -39,6 +39,7 @@
         </main>
         <footer class="footer">
             <p>Welcome to the Blog</p>
+            <p>All Rights Reserved</p>
         </footer>
     </div>
 </body>
