--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -4,10 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Component Developemnt for Blog Project</title>
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../Header/Header.css">
+    <link rel="stylesheet" href="../Navigiation/Navigation.css">
+    <link rel="stylesheet" href="../Footer/Footer.css">
+    <link rel="stylesheet" href="Signup.css">
+
 </head>
 
 <body>
+    <div id="root">
+        <header class="header">
+            <nav class="main-navigation">
+                <ul class="nav-links">
+                    <li class="nav-link"><a href="../index.html" class="nav-link-item">Link</a></li>
+                    <li class="nav-link"><a href="../Blog List/Blog List.html" class="nav-link-item">Blog List</a></li>
+                    <li class="nav-link"><a href="../Blog/Blog.html" class="nav-link-item">Blog</a></li>
+                    <li class="nav-link"><a href="../Sidebar/Sidebar.html" class="nav-link-item">Sidebar</a></li>
+                    <li class="nav-link"><a href="../Signup/Signup.html" class="nav-link-item">Sign Up</a></li>
+                    <li class="nav-link"><a href="../Login/Login.html" class="nav-link-item">Log In</a></li>
+                    <li class="nav-link"><a href="../Logo/Logo.html" class="nav-link-item">Logo</a></li>
+                    <li class="nav-link"><a href="../Navigiation/Navigation.html" class="nav-link-item">Navigation</a>
+                    </li>
+                    <li class="nav-link"><a href="../Header/Header.html" class="nav-link-item">Header</a></li>
+                    <li class="nav-link"><a href="../Footer/Footer.html" class="nav-link-item">Footer</a></li>
+                    <li class="nav-link"><a href="../User Profile/User Profile.html" class="nav-link-item">User
+                            Profile</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main-area">
+            <h1>User Sign Up</h1>
+            <section class="form-card">
+                <form action="" class="form login-form">
+
+                    <label for="email">E-Mail</label>
+                    <input type="email" id="email" required>
+
+                    <label for="password">Password</label>
+                    <input type="password" id="password" required>
+
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-nam" required>
+
+                    <label for="middle-name">Middle Name</label>
+                    <input type="text" id="middle-nam" required>
+
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-nam" required>
+
+                    <button type="submit" class="button">Signup</button>
+                </form>
+            </section>
+        </main>
+        <footer class="footer">
+            <p>Welcome to the Blog</p>
+        </footer>
+
+    </div>
+
 
 </body>
 
