updated sign up

--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -40,6 +40,9 @@
             <section class="form-card">
                 <form action="" class="form login-form">
 
+                    <label for="username">Username</label>
+                    <input type="text" id="username" required>
+
                     <label for="email">E-Mail</label>
                     <input type="email" id="email" required>
 
