added blog post

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li class="nav-link"><a href="index.html" class="nav-link-item">Link</a></li>
                     <li class="nav-link"><a href="./Blog List/Blog List.html" class="nav-link-item">Blog List</a></li>
                     <li class="nav-link"><a href="./Blog/Blog.html" class="nav-link-item">Blog</a></li>
+                    <li class="nav-link"><a href="./Blog Post/Blog Post.html" class="nav-link-item">Blog Post</a></li>
                     <li class="nav-link"><a href="./Sidebar/Sidebar.html" class="nav-link-item">Sidebar</a></li>
                     <li class="nav-link"><a href="./Signup/Signup.html" class="nav-link-item">Sign Up</a></li>
                     <li class="nav-link"><a href="./Login/Login.html" class="nav-link-item">Log In</a></li>
