added some few markup

--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -38,9 +38,77 @@
         </header>
         <main class="main-area">
 
-            <section class="blogs">
-                <div class="blog-post">
-
+            <section class="blog-post">
+                <div class="blog__card">
+                    <div class="blog-post__title">
+                        <p>Excepteur sint occaecat cupidatat Excepteur sint occaecat cupidatat Excepteur sint occaecat
+                            cupidatat </p>
+                    </div>
+                    <div class="blog-post__author">
+                        <p>Aurora Barnuts</p>
+                    </div>
+                    <div class="blog-post__content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit perferendis, dolorum explicabo
+                            incidunt aspernatur corporis eligendi ab tenetur fugiat facere, eaque ex error aperiam nisi
+                            eum nemo est dolor veritatis.
+                            Fugit et saepe dolores officia accusamus quibusdam. Quam totam dolore, voluptas ducimus in
+                            animi adipisci voluptatum culpa magni provident quos rerum vitae quibusdam ea incidunt quod
+                            unde, quae dolorem laborum.
+                            Autem cumque odit natus saepe nam deserunt illum, eveniet dicta, quod, laborum iste? Omnis
+                            atque ea nesciunt repellendus quos aliquid delectus, esse distinctio, ab est incidunt.
+                            Minima aliquid quod debitis.
+                            Esse illum quasi ratione neque recusandae quisquam soluta numquam harum autem suscipit
+                            doloremque rerum nostrum, ab nemo eius? Eos perspiciatis amet blanditiis dolorem adipisci
+                            illum suscipit ad sit nisi laboriosam.
+                            Dolore, nisi quis? Ea commodi eveniet expedita quasi consectetur. Eum deserunt possimus,
+                            odit nisi sunt tenetur sapiente dolorem enim dicta pariatur incidunt consequatur nobis
+                            ratione cum voluptate suscipit maxime eligendi.
+                            Dolor quos totam ipsa magnam consequatur quod suscipit, mollitia consectetur aliquid,
+                            assumenda a amet! Quibusdam vitae laborum eligendi pariatur labore mollitia repellat qui
+                            tenetur porro! Quisquam possimus dolor minus officia!
+                            Deleniti architecto corrupti voluptas at ratione magni similique molestiae ipsum aperiam ad
+                            ea cumque minus dolorem nam, veniam eos facere fuga provident consequuntur ducimus laborum
+                            quod odit? Ab, quibusdam deleniti.
+                            Sequi sit ad reiciendis iusto possimus doloremque mollitia ullam. Eius saepe iusto vel sint
+                            quas nam maiores adipisci. Error quo eos doloribus atque incidunt autem quis tempora quasi
+                            esse iure!
+                            Eligendi tempora sed, doloremque modi impedit fuga vero illo labore vel necessitatibus.
+                            Quasi ut molestias, id exercitationem inventore veniam ducimus voluptates maxime odio
+                            cupiditate impedit harum illum libero incidunt eum.
+                            Consequatur aperiam exercitationem impedit veniam architecto aliquam tenetur dolorem enim
+                            magnam omnis adipisci rerum culpa obcaecati fugiat praesentium odio voluptatibus, alias illo
+                            neque reprehenderit recusandae perferendis. Provident, ex? Omnis, aspernatur.
+                            Sapiente obcaecati maiores facere voluptatem, nisi numquam odit animi autem architecto
+                            facilis alias magni sequi, eius eaque reiciendis. Laudantium nihil quos molestiae enim natus
+                            illum omnis magnam dicta esse consectetur!
+                            Molestias exercitationem cupiditate debitis amet distinctio odit. Cum soluta placeat rem
+                            beatae. Repellat delectus fuga aut odit! Adipisci odio voluptate ratione quibusdam
+                            blanditiis consequatur, fugit enim quis porro, soluta perspiciatis?
+                            Quam recusandae laboriosam tenetur porro delectus facilis officia modi velit voluptates
+                            officiis, repudiandae ratione quos consequatur ipsum blanditiis a provident deleniti,
+                            consequuntur cumque perferendis maiores, pariatur dolores? Cupiditate, corporis alias.
+                            Omnis dolores odit, asperiores nostrum cum quia aliquid voluptatem officiis. Aut voluptatum
+                            architecto, sequi reprehenderit similique non tempora provident! Reprehenderit corporis
+                            autem sed illo quae amet soluta ex porro similique!
+                            Ipsum corrupti odio repudiandae quas, neque sed nihil magnam veritatis officia deleniti
+                            soluta distinctio quam dignissimos iusto nam voluptatibus praesentium animi fugit
+                            exercitationem maxime. Consectetur reiciendis eaque a saepe exercitationem.
+                            Voluptates inventore atque amet. Nam eaque fuga earum omnis sed animi unde error maxime
+                            facilis. Sed consequatur deserunt odio quasi voluptates labore assumenda odit numquam
+                            provident saepe ea, rerum aliquid.
+                            Aliquid, porro quia sunt ipsum ut saepe. Cum similique nisi architecto voluptatibus delectus
+                            accusamus at praesentium veniam ab assumenda vero amet officia totam facere, debitis atque,
+                            ad maiores magnam culpa.
+                            Qui at minus maiores explicabo voluptas soluta harum repellat impedit. Pariatur nobis
+                            deserunt blanditiis, optio provident voluptatem ullam explicabo rerum quod delectus,
+                            accusamus beatae eligendi cumque sunt praesentium? Quam, blanditiis?
+                            Ad eos, quo illo placeat dolorum assumenda error asperiores aliquam at commodi voluptate
+                            culpa cum non consequatur similique inventore explicabo nesciunt, enim beatae! Eveniet vero
+                            voluptatum aliquam, rerum repellat laboriosam!
+                            Voluptate quidem iusto eligendi sapiente sint, nobis natus fugit impedit consequuntur nam
+                            dolores necessitatibus laudantium doloremque numquam delectus pariatur error quos magni
+                            ratione, inventore saepe fuga ducimus. Voluptatibus, magni laudantium.</p>
+                    </div>
                 </div>
             </section>
         </main>
