added the comment card for the post

--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -109,8 +109,36 @@
                             dolores necessitatibus laudantium doloremque numquam delectus pariatur error quos magni
                             ratione, inventore saepe fuga ducimus. Voluptatibus, magni laudantium.</p>
                     </div>
+
+
+
+                    <div class="blogpost__date">
+                        <p>January 14, 2012</p>
+                    </div>
+                    <div class="blog-post__status">
+                        <div class="likes">
+                            <p>100</p>
+                        </div>
+                        <div class="comments">
+                            <p>100</p>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="comment__card">
+                    <div class="comment__heading">
+                        <h3>Comments</h3>
+                    </div>
+
+                    <div class="comment__message">
+                        <textarea name="comment-message" id="comment-message" rows="5">
+                        </textarea>
+                    </div>
+                </div>
+
             </section>
+
+
         </main>
         <footer class="footer">
             <p>Welcome to the Blog</p>
