--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <nav class="main-navigation">
                 <ul class="nav-links">
-                    <li class="nav-link"><a href="index.html" class="nav-link-item">Link</a></li>
+                    <li class="nav-link"><a href="index.html" class="nav-link-item active">Link</a></li>
                     <li class="nav-link"><a href="./Blog List/Blog List.html" class="nav-link-item">Blog List</a></li>
                     <li class="nav-link"><a href="./Blog/Blog.html" class="nav-link-item">Blog</a></li>
                     <li class="nav-link"><a href="./Blog Post/Blog Post.html" class="nav-link-item">Blog Post</a></li>
