--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -42,17 +42,18 @@
 
                 <div role="grid" class="blogs__table">
                     <div role="row" class="blog-row__head">
-
+                        <div role="gridcell" class="blog__cell">Blog #</div>
                         <div role="gridcell" class="blog__cell">Title</div>
                         <div role="gridcell" class="blog__cell">Category</div>
                         <div role="gridcell" class="blog__cell">Author</div>
-                        <div role="gridcell" class="blog__cell">Uploaded</div>
+                        <div role="gridcell" class="blog__cell">Created</div>
                         <div role="gridcell" class="blog__cell">Updated</div>
                         <div role="gridcell" class="blog__cell">Views</div>
                         <div role="gridcell" class="blog__cell">Likes</div>
                         <div role="gridcell" class="blog__cell">Actions</div>
                     </div>
                     <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell">01</div>
                         <div role="gridcell" class="blog__cell">Javascript</div>
                         <div role="gridcell" class="blog__cell">Web Dev</div>
                         <div role="gridcell" class="blog__cell">Mark</div>
@@ -60,9 +61,11 @@
                         <div role="gridcell" class="blog__cell">March 1, 1988</div>
                         <div role="gridcell" class="blog__cell">100</div>
                         <div role="gridcell" class="blog__cell">1000</div>
-                        <div role="gridcell" class="blog__cell">Edit || Delete</div>
+                        <div role="gridcell" class="blog__cell"><span class="edit-blog-button">Edit</span> <span
+                                class="delete-blog-button">Delete</span></div>
                     </a>
                     <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell">02</div>
                         <div role="gridcell" class="blog__cell">HTML</div>
                         <div role="gridcell" class="blog__cell">Web Dev</div>
                         <div role="gridcell" class="blog__cell">Marcus</div>
@@ -73,6 +76,7 @@
                         <div role="gridcell" class="blog__cell">Edit || Delete</div>
                     </a>
                     <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell">03</div>
                         <div role="gridcell" class="blog__cell">CSS</div>
                         <div role="gridcell" class="blog__cell">Web Dev</div>
                         <div role="gridcell" class="blog__cell">Leo</div>
@@ -84,6 +88,8 @@
                     </a>
                 </div>
             </section>
+
+
         </main>
         <footer class="footer">
             <p>Welcome to the Blog</p>
