--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -36,30 +36,35 @@
             </nav>
         </header>
         <main class="main-area">
-            <h1>User Sign Up</h1>
-            <section class="form-card">
-                <form action="" class="form login-form">
 
-                    <label for="username">Username</label>
-                    <input type="text" id="username" required>
+            <section class="form-section">
+                <div class="form-card">
+                    <div class="form-card__head">
+                        <h2>User Sign Up</h2>
+                    </div>
+                    <div class="form-card__body">
+                        <form action="" class="form login-form">
+                            <label for="username">Username</label>
+                            <input type="text" id="username" required>
 
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email" required>
+                            <label for="email">E-Mail</label>
+                            <input type="email" id="email" required>
 
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
+                            <label for="password">Password</label>
+                            <input type="password" id="password" required>
 
-                    <label for="first-name">First Name</label>
-                    <input type="text" id="first-nam" required>
+                            <label for="first-name">First Name</label>
+                            <input type="text" id="first-nam" required>
 
-                    <label for="middle-name">Middle Name</label>
-                    <input type="text" id="middle-nam" required>
+                            <label for="middle-name">Middle Name</label>
+                            <input type="text" id="middle-nam" required>
 
-                    <label for="last-name">Last Name</label>
-                    <input type="text" id="last-nam" required>
-
-                    <button type="submit" class="button">Signup</button>
-                </form>
+                            <label for="last-name">Last Name</label>
+                            <input type="text" id="last-nam" required>
+                            <button type="submit" class="button">Signup</button>
+                        </form>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="footer">
