--- a/Navigiation/Navigation.html
+++ b/Navigiation/Navigation.html
@@ -17,7 +17,8 @@
             <nav class="main-navigation">
                 <ul class="nav-links">
                     <li class="nav-link"><a href="../index.html" class="nav-link-item active">Link</a></li>
-                    <li class="nav-link"><a href="../Blog List/Blog List.html" class="nav-link-item">Blog List</a></li>
+                    <li class="nav-link"><a href="../Blog List/Blog List.html" class="nav-link-item">Blog
+                            List</a></li>
                     <li class="nav-link"><a href="../Blog/Blog.html" class="nav-link-item">Blog</a></li>
                     <li class="nav-link"><a href="../Sidebar/Sidebar.html" class="nav-link-item">Sidebar</a></li>
                     <li class="nav-link"><a href="../Signup/Signup.html" class="nav-link-item">Sign Up</a></li>
