--- a/Signup/Signup.html
+++ b/Signup/Signup.html
@@ -22,7 +22,7 @@
                     <li class="nav-link"><a href="../Blog List/Blog List.html" class="nav-link-item">Blog List</a></li>
                     <li class="nav-link"><a href="../Blog/Blog.html" class="nav-link-item">Blog</a></li>
                     <li class="nav-link"><a href="../Sidebar/Sidebar.html" class="nav-link-item">Sidebar</a></li>
-                    <li class="nav-link"><a href="../Signup/Signup.html" class="nav-link-item">Sign Up</a></li>
+                    <li class="nav-link"><a href="../Signup/Signup.html" class="nav-link-item active">Sign Up</a></li>
                     <li class="nav-link"><a href="../Login/Login.html" class="nav-link-item">Log In</a></li>
                     <li class="nav-link"><a href="../Logo/Logo.html" class="nav-link-item">Logo</a></li>
                     <li class="nav-link"><a href="../Navigiation/Navigation.html" class="nav-link-item">Navigation</a>
@@ -43,25 +43,38 @@
                         <h2>User Sign Up</h2>
                     </div>
                     <div class="form-card__body">
-                        <form action="" class="form login-form">
-                            <label for="username">Username</label>
-                            <input type="text" id="username" required>
+                        <form action="" class="form signup-form">
+                            <div class="form-inputs">
+                                <label for="username">Username</label>
+                                <input type="text" id="username" required>
+                            </div>
+                            <div class="form-inputs">
+                                <label for="email">E-Mail</label>
+                                <input type="email" id="email" required>
+                            </div>
 
-                            <label for="email">E-Mail</label>
-                            <input type="email" id="email" required>
+                            <div class="form-inputs">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" required>
+                            </div>
 
-                            <label for="password">Password</label>
-                            <input type="password" id="password" required>
+                            <div class="form-inputs">
+                                <label for="first-name">First Name</label>
+                                <input type="text" id="first-nam" required>
+                            </div>
 
-                            <label for="first-name">First Name</label>
-                            <input type="text" id="first-nam" required>
+                            <div class="form-inputs">
+                                <label for="middle-name">Middle Name</label>
+                                <input type="text" id="middle-nam" required>
+                            </div>
 
-                            <label for="middle-name">Middle Name</label>
-                            <input type="text" id="middle-nam" required>
-
-                            <label for="last-name">Last Name</label>
-                            <input type="text" id="last-nam" required>
-                            <button type="submit" class="button">Signup</button>
+                            <div class="form-inputs">
+                                <label for="last-name">Last Name</label>
+                                <input type="text" id="last-nam" required>
+                            </div>
+                            <div class="form-button">
+                                <button type="submit" class="button">Signup</button>
+                            </div>
                         </form>
                     </div>
                 </div>
