--- a/Login/Login.html
+++ b/Login/Login.html
@@ -23,7 +23,7 @@
                     <li class="nav-link"><a href="../Blog/Blog.html" class="nav-link-item">Blog</a></li>
                     <li class="nav-link"><a href="../Sidebar/Sidebar.html" class="nav-link-item">Sidebar</a></li>
                     <li class="nav-link"><a href="../Signup/Signup.html" class="nav-link-item">Sign Up</a></li>
-                    <li class="nav-link"><a href="../Login/Login.html" class="nav-link-item">Log In</a></li>
+                    <li class="nav-link"><a href="../Login/Login.html" class="nav-link-item active">Log In</a></li>
                     <li class="nav-link"><a href="../Logo/Logo.html" class="nav-link-item">Logo</a></li>
                     <li class="nav-link"><a href="../Navigiation/Navigation.html" class="nav-link-item">Navigation</a>
                     </li>
@@ -36,15 +36,32 @@
             </nav>
         </header>
         <main class="main-area">
-            <h1>User Log In</h1>
-            <section class="form-card">
-                <form action="" class="form login-form">
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email" required>
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required>
-                    <button type="submit" class="button">Login</button>
-                </form>
+
+            <section class="form-section">
+                <div class="form-card">
+                    <div class="form-card__head">
+                        <h2>User Log In</h2>
+                    </div>
+                    <div class="form-card__body">
+                        <form action="" class="form signup-form">
+                            <div class="form-inputs">
+                                <label for="username">Username</label>
+                                <input type="text" id="username" required>
+                            </div>
+
+
+                            <div class="form-inputs">
+                                <label for="password">Password</label>
+                                <input type="password" id="password" required>
+                            </div>
+
+
+                            <div class="form-button">
+                                <button type="submit" class="button">Log In</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="footer">
