--- a/Blog List/Blog List.html
+++ b/Blog List/Blog List.html
@@ -42,46 +42,66 @@
 
                 <div role="grid" class="blogs__table">
                     <div role="row" class="blog-row__head">
-                        <div role="gridcell" class="blog__cell">Blog No</div>
-                        <div role="gridcell" class="blog__cell">Title</div>
-                        <div role="gridcell" class="blog__cell">Category</div>
-                        <div role="gridcell" class="blog__cell">Author</div>
-                        <div role="gridcell" class="blog__cell">Created</div>
-                        <div role="gridcell" class="blog__cell">Updated</div>
-                        <div role="gridcell" class="blog__cell">Actions</div>
+                        <div role="gridcell" class="blog__cell blog-number">Blog No.</div>
+                        <div role="gridcell" class="blog__cell blog-title">Title</div>
+                        <div role="gridcell" class="blog__cell blog-category">Category</div>
+                        <div role="gridcell" class="blog__cell blog-author">Author</div>
+                        <div role="gridcell" class="blog__cell blog-created">Created</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Updated</div>
+                        <div role="gridcell" class="blog__cell blog-actions">Actions</div>
                     </div>
                     <a role="row" class="blog-row__body" href="#">
 
 
-                        <div role="gridcell" class="blog__cell">01</div>
-                        <div role="gridcell" class="blog__cell">The Basics of Javascript</div>
-                        <div role="gridcell" class="blog__cell">Javascript</div>
-                        <div role="gridcell" class="blog__cell">Aurora Barnuts</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell"><span class="edit-blog-button">Edit</span> <span
-                                class="delete-blog-button">Delete</span></div>
+                        <div role="gridcell" class="blog__cell blog-number">01</div>
+                        <div role="gridcell" class="blog__cell blog-title">The Basics of Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-category">Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-author">Aurora Barnuts</div>
+                        <div role="gridcell" class="blog__cell blog-created">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-actions"><span class="edit-blog-button">Edit</span>
+                            <span class="delete-blog-button">Delete</span></div>
 
                     </a>
                     <a role="row" class="blog-row__body" href="#">
-                        <div role="gridcell" class="blog__cell">02</div>
-                        <div role="gridcell" class="blog__cell">The Basics of Javascript</div>
-                        <div role="gridcell" class="blog__cell">Javascript</div>
-                        <div role="gridcell" class="blog__cell">Aurora Barnuts</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell"><span class="edit-blog-button">Edit</span> <span
-                                class="delete-blog-button">Delete</span></div>
+                        <div role="gridcell" class="blog__cell blog-number">02</div>
+                        <div role="gridcell" class="blog__cell blog-title">The Basics of Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-category">Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-author">Aurora Barnuts</div>
+                        <div role="gridcell" class="blog__cell blog-created">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-actions"><span class="edit-blog-button">Edit</span>
+                            <span class="delete-blog-button">Delete</span></div>
                     </a>
                     <a role="row" class="blog-row__body" href="#">
-                        <div role="gridcell" class="blog__cell">03</div>
-                        <div role="gridcell" class="blog__cell">The Basics of Javascript</div>
-                        <div role="gridcell" class="blog__cell">Javascript</div>
-                        <div role="gridcell" class="blog__cell">Aurora Barnuts</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell">Jan-14-12</div>
-                        <div role="gridcell" class="blog__cell"><span class="edit-blog-button">Edit</span> <span
-                                class="delete-blog-button">Delete</span></div>
+                        <div role="gridcell" class="blog__cell blog-number">03</div>
+                        <div role="gridcell" class="blog__cell blog-title">The Basics of Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-category">Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-author">Aurora Barnuts</div>
+                        <div role="gridcell" class="blog__cell blog-created">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-actions"><span class="edit-blog-button">Edit</span>
+                            <span class="delete-blog-button">Delete</span></div>
+                    </a>
+                    <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell blog-number">04</div>
+                        <div role="gridcell" class="blog__cell blog-title">The Basics of Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-category">Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-author">Aurora Barnuts</div>
+                        <div role="gridcell" class="blog__cell blog-created">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-actions"><span class="edit-blog-button">Edit</span>
+                            <span class="delete-blog-button">Delete</span></div>
+                    </a>
+                    <a role="row" class="blog-row__body" href="#">
+                        <div role="gridcell" class="blog__cell blog-number">05</div>
+                        <div role="gridcell" class="blog__cell blog-title">The Basics of Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-category">Javascript</div>
+                        <div role="gridcell" class="blog__cell blog-author">Aurora Barnuts</div>
+                        <div role="gridcell" class="blog__cell blog-created">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-updated">Jan-14-12</div>
+                        <div role="gridcell" class="blog__cell blog-actions"><span class="edit-blog-button">Edit</span>
+                            <span class="delete-blog-button">Delete</span></div>
                     </a>
                 </div>
             </section>
