--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -159,11 +159,25 @@
                         <h3>Comments</h3>
                     </div>
 
-                    <div class="comment__message">
-                        <textarea name="comment-message" id="comment-message" rows="5">
-                        </textarea>
-                    </div>
+                    <form action="" class="form comment-form">
+
+
+                        <div class="comment__message">
+                            <textarea name="comment-message" id="comment-message" rows="5">
+                            </textarea>
+                        </div>
+
+
+
+                        <div class="form-button">
+                            <button type="submit" class="button">Add Comment</button>
+                        </div>
+                    </form>
+
+
                 </div>
+
+
 
             </section>
 
