updated blogpost mark up for comment info

--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -174,6 +174,36 @@
                         </div>
                     </form>
 
+                    <div class="comment-list">
+                        <div class="comment-item">
+                            <div class="comment-item__message">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis temporibus
+                                    accusamus autem, sequi in perspiciatis. Sapiente eos, aperiam voluptas tempore
+                                    dolorem quia necessitatibus quae ut quasi aliquid, sunt nam molestiae?
+                                    Praesentium, vel aspernatur eos qui maxime cum. Illum impedit explicabo sequi, harum
+                                    molestiae aperiam facilis laudantium tempora incidunt iure voluptas cumque! Porro
+                                    sapiente eos dignissimos incidunt hic cumque nihil enim?
+                                    Quis laboriosam eos nesciunt alias maiores ipsam sint dignissimos. Officia maxime
+                                    iure aut sunt quos, tempore sed eius, tenetur quo, fuga repudiandae expedita.
+                                    Asperiores laborum facilis reiciendis? Veniam, perspiciatis voluptatibus?
+                                    In quidem quam ipsum et quaerat inventore, nesciunt voluptatum, ipsa, praesentium
+                                    accusantium tenetur neque quos. Quis id, ducimus debitis optio impedit placeat
+                                    numquam saepe, nisi, velit quos eum incidunt repellendus!
+                                    Voluptas nam sint architecto. Reiciendis, id. Dolorem cumque velit nisi rerum,
+                                    dicta, est laborum natus voluptatem magni architecto unde nam maxime, laboriosam
+                                    pariatur tenetur accusantium esse? Autem, possimus vitae! Nemo!</p>
+                            </div>
+                            <div class="comment-item__details">
+                                <div class="comment-author">
+                                    <h3>Aurora Barnuts</h3>
+                                </div>
+                                <div class="comment-date">
+                                    <h3>January 14, 2012</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
 
