updated comment form button

--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -154,12 +154,12 @@
                     </div>
                 </div>
 
-                <div class="comment__card">
-                    <div class="comment__heading">
+                <div class="comments__card">
+                    <div class="comments__heading">
                         <h3>Comments</h3>
                     </div>
 
-                    <form action="" class="form comment-form">
+                    <form action="" class="form comments-form">
 
 
                         <div class="comment__message">
@@ -169,7 +169,7 @@
 
 
 
-                        <div class="form-button">
+                        <div class="comment__add-comment">
                             <button type="submit" class="button">Add Comment</button>
                         </div>
                     </form>
@@ -182,16 +182,7 @@
                                     dolorem quia necessitatibus quae ut quasi aliquid, sunt nam molestiae?
                                     Praesentium, vel aspernatur eos qui maxime cum. Illum impedit explicabo sequi, harum
                                     molestiae aperiam facilis laudantium tempora incidunt iure voluptas cumque! Porro
-                                    sapiente eos dignissimos incidunt hic cumque nihil enim?
-                                    Quis laboriosam eos nesciunt alias maiores ipsam sint dignissimos. Officia maxime
-                                    iure aut sunt quos, tempore sed eius, tenetur quo, fuga repudiandae expedita.
-                                    Asperiores laborum facilis reiciendis? Veniam, perspiciatis voluptatibus?
-                                    In quidem quam ipsum et quaerat inventore, nesciunt voluptatum, ipsa, praesentium
-                                    accusantium tenetur neque quos. Quis id, ducimus debitis optio impedit placeat
-                                    numquam saepe, nisi, velit quos eum incidunt repellendus!
-                                    Voluptas nam sint architecto. Reiciendis, id. Dolorem cumque velit nisi rerum,
-                                    dicta, est laborum natus voluptatem magni architecto unde nam maxime, laboriosam
-                                    pariatur tenetur accusantium esse? Autem, possimus vitae! Nemo!</p>
+                                    sapiente eos dignissimos incidunt hic cumque nihil enim?</p>
                             </div>
                             <div class="comment-item__details">
                                 <div class="comment-author">
