--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -193,6 +193,45 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="comment-item">
+                            <div class="comment-item__message">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis temporibus
+                                    accusamus autem, sequi in perspiciatis. Sapiente eos, aperiam voluptas tempore
+                                    dolorem quia necessitatibus quae ut quasi aliquid, sunt nam molestiae?
+                                    Praesentium, vel aspernatur eos qui maxime cum. Illum impedit explicabo sequi, harum
+                                    molestiae aperiam facilis laudantium tempora incidunt iure voluptas cumque! Porro
+                                    sapiente eos dignissimos incidunt hic cumque nihil enim?</p>
+                            </div>
+                            <div class="comment-item__details">
+                                <div class="comment-author">
+                                    <h3>Aurora Barnuts</h3>
+                                </div>
+                                <div class="comment-date">
+                                    <h3>January 14, 2012</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="comment-item">
+                            <div class="comment-item__message">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis temporibus
+                                    accusamus autem, sequi in perspiciatis. Sapiente eos, aperiam voluptas tempore
+                                    dolorem quia necessitatibus quae ut quasi aliquid, sunt nam molestiae?
+                                    Praesentium, vel aspernatur eos qui maxime cum. Illum impedit explicabo sequi, harum
+                                    molestiae aperiam facilis laudantium tempora incidunt iure voluptas cumque! Porro
+                                    sapiente eos dignissimos incidunt hic cumque nihil enim?</p>
+                            </div>
+                            <div class="comment-item__details">
+                                <div class="comment-author">
+                                    <h3>Aurora Barnuts</h3>
+                                </div>
+                                <div class="comment-date">
+                                    <h3>January 14, 2012</h3>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
 
