--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -41,8 +41,9 @@
             <section class="blog-post">
                 <div class="blog-post__card">
                     <div class="blog-post__title">
-                        <h2>Excepteur sint occaecat cupidatat Excepteur sint occaecat cupidatat Excepteur sint occaecat
-                            cupidatat </h2>
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio velit adipisci ex odit
+                            minus repellat perferendis, unde officiis deserunt eveniet, dolorum ab repellendus eum quis,
+                            expedita atque iusto voluptatem. Facilis.</h2>
                     </div>
                     <div class="blog-post__author">
                         <h3>Aurora Barnuts</h3>
