updated user profile

--- a/Blog Post/Blog Post.html
+++ b/Blog Post/Blog Post.html
@@ -164,8 +164,7 @@
 
 
                         <div class="comment__message">
-                            <textarea name="comment-message" id="comment-message" rows="5">
-                            </textarea>
+                            <textarea name="comment-message" id="comment-message" rows="5"></textarea>
                         </div>
 
 
