fixing user profile avatar image

--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -76,7 +76,7 @@
 				<section class="user-profile">
 					<div class="user-profile__content">
 						<div class="user-profile__image">
-							<img src="" alt="user name" />
+							<img src="../Images/ChloeAvatar.jpg" alt="user name" />
 						</div>
 
 						<div class="user-profile__info">
