completed user profile

--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -75,12 +75,10 @@
 			<main class="main-area">
 				<section class="user-profile">
 					<div class="user-profile__content">
-						<div class="user-profile__image">
-							<img src="../Images/ChloeAvatar.jpg" alt="user name" />
-						</div>
+						<div class="user-profile__image"></div>
 
 						<div class="user-profile__info">
-							<h2 class="fullname">Name</h2>
+							<h2 class="fullname">Daisy Johnson</h2>
 							<ul class="user-profile__info__detail-list">
 								<li class="user-profile__info__detail-item">1 Blog</li>
 								<li class="user-profile__info__detail-item">
