--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -69,6 +69,12 @@
 								>User Profile</a
 							>
 						</li>
+
+						<li class="nav-link">
+							<a href="../User List/User List.html" class="nav-link-item"
+								>User List</a
+							>
+						</li>
 					</ul>
 				</nav>
 			</header>
