added healthcheck css

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -73,8 +73,8 @@
 				</nav>
 			</header>
 			<main class="main-area">
-				<section class="user-profile">
-					<div class="user-profile__content">
+				<section class="user-list">
+					<div class="user-list__card">
 						<div class="user-profile__image"></div>
 
 						<div class="user-profile__info">
