updated bem usage

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -72,21 +72,25 @@
 					</ul>
 				</nav>
 			</header>
-			<main class="main-area">
-				<section class="user-list">
-					<div class="user-list__card">
-						<div class="user-profile__image"></div>
+			<main class="o-main-area">
+				<section class="o-section">
+					<ul class="o-user-list">
+						<li class="o-user-list__item">
+							<div class="c-user">
+								<div class="c-user__avatar"></div>
 
-						<div class="user-profile__info">
-							<h2 class="user-profile__info__fullname">Daisy Johnson</h2>
-							<ul class="user-profile__info__detail-list">
-								<li class="user-profile__info__detail-item">1 Blog</li>
-								<li class="user-profile__info__detail-item">
-									2 Friends
-								</li>
-							</ul>
-						</div>
-					</div>
+								<div class="c-user__info">
+									<h1 class="c-user__fullname">Daisy Johnson</h1>
+									<ul class="c-user__detail-list">
+										<li class="c-user__detail-lis-item">1 Blog</li>
+										<li class="c-user__detail-lis-item">
+											2 Friends
+										</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+					</ul>
 				</section>
 			</main>
 			<footer class="footer">
