fixed avatar layout

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -73,7 +73,7 @@
 				</nav>
 			</header>
 			<main class="o-main-area">
-				<section class="o-section">
+				<section class="o-section-container">
 					<ul class="o-user-list">
 						<li class="o-user-list__item">
 							<div class="c-user">
