finished up user list component

--- a/User List/User List.html
+++ b/User List/User List.html
@@ -82,8 +82,24 @@
 								<div class="c-user__info">
 									<h1 class="c-user__fullname">Daisy Johnson</h1>
 									<ul class="c-user__detail-list">
-										<li class="c-user__detail-lis-item">1 Blog</li>
-										<li class="c-user__detail-lis-item">
+										<li class="c-user__detail-list-item">1 Blog</li>
+										<li class="c-user__detail-list-item">
+											2 Friends
+										</li>
+									</ul>
+								</div>
+							</div>
+						</li>
+
+						<li class="o-user-list__item">
+							<div class="c-user">
+								<div class="c-user__avatar"></div>
+
+								<div class="c-user__info">
+									<h1 class="c-user__fullname">Daisy Johnson</h1>
+									<ul class="c-user__detail-list">
+										<li class="c-user__detail-list-item">1 Blog</li>
+										<li class="c-user__detail-list-item">
 											2 Friends
 										</li>
 									</ul>
