updated user profile using new bem

--- a/User Profile/User Profile.html
+++ b/User Profile/User Profile.html
@@ -95,6 +95,57 @@
 					</div>
 				</section>
 			</main>
+
+			<main class="o-main-area">
+				<section class="o-section-container">
+					<div class="o-page-heading">
+						<h1 class="c-page-heading">User Profile</h1>
+					</div>
+
+					<div class="o-page-body">
+						<div class="c-user-profile">
+							<div class="c-user-profile__image"></div>
+
+							<div class="c-user-profile__info">
+								<h2 class="c-user-profile__info__fullname">
+									Daisy Johnson
+								</h2>
+								<ul class="c-user-profile__info__detail-list">
+									<li class="c-user-profile__info__detail-item">
+										1 Blog
+									</li>
+									<li class="c-user-profile__info__detail-item">
+										2 Friends
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<ul class="o-friend-list">
+							<li class="o-friend-list-item">
+								<div class="c-mini-user">
+									<div class="c-mini-user__avatar"></div>
+
+									<div class="c-mini-user__info">
+										<h1 class="c-mini-user__fullname">
+											Daisy Johnson
+										</h1>
+										<ul class="c-mini-user__detail-list">
+											<li class="c-mini-user__detail-list-item">
+												1 Blog
+											</li>
+											<li class="c-mini-user__detail-list-item">
+												2 Friends
+											</li>
+										</ul>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</section>
+			</main>
+
 			<footer class="footer">
 				<p>Welcome to the Blog</p>
 			</footer>
